# low-end-engine

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  shader-formatter.toml
src/editor/: CMakeLists.txt
src/editor/src/: main.cpp
src/editor_lib/: CMakeLists.txt
src/editor_lib/private/: EditorGameInstance.cpp
src/editor_lib/private/input/: EditorInputEventIds.hpp
src/editor_lib/private/node/: EditorCameraNode.cpp
src/editor_lib/public/: EditorGameInstance.h
src/editor_lib/public/misc/: EditorNodeCreationHelpers.hpp
src/editor_lib/public/node/: EditorCameraNode.h
src/editor_lib/src/: EditorColorTheme.cpp  EditorColorTheme.h  EditorConstants.hpp  EditorGameInstance.cpp  EditorGameInstance.h  EditorResourcePaths.hpp  EditorTheme.cpp  EditorTheme.h
src/editor_lib/src/input/: EditorInputEventIds.hpp
src/editor_lib/src/node/: ContextMenuNode.cpp  ContextMenuNode.h  EditorCameraNode.cpp  EditorCameraNode.h  GizmoMode.hpp  GizmoNode.cpp  GizmoNode.h  LogViewNode.cpp  LogViewNode.h
src/editor_lib/src/node/content_browser/: ContentBrowser.cpp  ContentBrowser.h
src/editor_lib/src/node/menu/: ConfirmationMenu.cpp  ConfirmationMenu.h  ContextMenuNode.cpp  ContextMenuNode.h  FileDialogMenu.cpp  FileDialogMenu.h  SelectNodeTypeMenu.cpp  SelectNodeTypeMenu.h  SetNameMenu.cpp  SetNameMenu.h
src/editor_lib/src/node/node_tree_inspector/: NodeTreeInspector.cpp  NodeTreeInspector.h  NodeTreeInspectorItem.cpp  NodeTreeInspectorItem.h
src/editor_lib/src/node/property_inspector/: BoolInspector.cpp  BoolInspector.h  FloatInspector.cpp  FloatInspector.h  GlmVecInspector.cpp  GlmVecInspector.h  IntInspector.cpp  IntInspector.h  LongLongInspector.cpp  LongLongInspector.h  PropertyInspector.cpp  PropertyInspector.h  StringInspector.cpp  StringInspector.h  UnsignedIntInspector.cpp  UnsignedIntInspector.h  UnsignedLongLongInspector.cpp  UnsignedLongLongInspector.h
src/engine_lib/: CMakeLists.txt
src/engine_lib/private/game/: DebugConsole.cpp  GameInstance.cpp  GameManager.cpp  GameManager.h  Window.cpp  World.cpp  World.h
src/engine_lib/private/game/camera/: CameraManager.cpp  CameraProperties.cpp
src/engine_lib/private/game/geometry/: ConvexShapeGeometry.cpp  MeshGeometry.cpp  MeshIndexType.hpp  MeshNodeGeometry.cpp  PrimitiveMeshGenerator.cpp  ScreenQuadGeometry.cpp  SkeletalMeshNodeGeometry.cpp
src/engine_lib/private/game/node/: CameraNode.cpp  MeshNode.cpp  Node.cpp  ParticleEmitterNode.cpp  SkeletalMeshNode.cpp  SkeletonBoneAttachmentNode.cpp  SkeletonNode.cpp  Sound2dNode.cpp  Sound3dNode.cpp  SpatialNode.cpp
src/engine_lib/private/game/physics/: CoordinateConversions.hpp  PhysicsLayers.cpp  PhysicsLayers.h  PhysicsManager.cpp  PhysicsManager.h
src/engine_lib/private/game/script/: Script.cpp  ScriptFuncInterface.cpp  ScriptManager.cpp
src/engine_lib/private/input/: InputManager.cpp
src/engine_lib/private/io/: ConfigManager.cpp  GltfImporter.cpp  Log.cpp  Logger.cpp  Serializable.cpp
src/engine_lib/private/material/: Material.cpp  TextureHandle.cpp  TextureManager.cpp
src/engine_lib/private/misc/: Error.cpp  Globals.cpp  InitManager.hpp  ProjectPaths.cpp  ReflectedTypeDatabase.cpp  ThreadPool.cpp  ThreadPool.h
src/engine_lib/private/misc/shapes/: AABB.cpp  Cone.cpp  Frustum.cpp  Plane.cpp  Sphere.cpp
src/engine_lib/private/render/: DebugDrawer.cpp  FontManager.cpp  Framebuffer.cpp  GpuDebugMarker.hpp  GpuResourceManager.cpp  GpuResourceManager.h  GpuTimeQuery.hpp  LightSourceLimits.hpp  LightSourceManager.cpp  LightSourceManager.h  Material.cpp  MeshNodeManager.cpp  MeshNodeManager.h  MeshRenderer.cpp  MeshRenderer.h  ParticleRenderer.cpp  ParticleRenderer.h  PhysicsDebugDrawer.hpp  PostProcessManager.cpp  PostProcessSettings.cpp  RenderStatistics.cpp  Renderer.cpp  RenderingHandle.cpp  RenderingHandle.h  SdlManager.hpp  Shader.cpp  ShaderManager.cpp  ShaderProgram.cpp  ShaderProgram.h  ShaderProgramUsage.hpp  UiManager.cpp  UiManager.h  UiNodeManager.cpp  UiNodeManager.h  UiRenderData.cpp  UiRenderData.h  VertexArrayObject.cpp
src/engine_lib/private/render/font/: FontManager.cpp  FontManager.h
src/engine_lib/private/render/shader/: LightSourceShaderArray.cpp  LightSourceShaderArray.h  Shader.cpp  Shader.h  ShaderArrayIndexManager.cpp  ShaderArrayIndexManager.h  ShaderManager.cpp  ShaderManager.h
src/engine_lib/private/render/wrapper/: Buffer.cpp  Buffer.h  Framebuffer.cpp  Framebuffer.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexArrayObject.cpp  VertexArrayObject.h
src/engine_lib/private/sound/: SoundManager.cpp
src/engine_lib/public/: Renderer.h  Window.h
src/engine_lib/public/game/: DebugConsole.h  GameInstance.h  Window.h  World.h
src/engine_lib/public/game/camera/: CameraManager.h  CameraProperties.h
src/engine_lib/public/game/geometry/: ConvexShapeGeometry.h  MeshGeometry.h  MeshNodeGeometry.h  PrimitiveMeshGenerator.h  ScreenQuadGeometry.h  SkeletalMeshNodeGeometry.h
src/engine_lib/public/game/node/: CameraNode.h  MeshNode.h  Node.h  NodeTickGroup.hpp  ParticleEmitterNode.h  SkeletonNode.h  (+5 more)
src/engine_lib/public/input/: GamepadButton.hpp  InputManager.h  KeyboardButton.hpp  KeyboardKey.hpp  MouseButton.hpp
src/engine_lib/public/io/: ConfigManager.h  GltfImporter.h  Log.h  Logger.h  Serializable.h
src/engine_lib/public/material/: Material.h  TextureHandle.h  TextureManager.h  TextureUsage.hpp
src/engine_lib/public/math/: GLMath.hpp  MathHelpers.hpp
src/engine_lib/public/misc/: Error.h  Globals.h  MemoryUsage.hpp  Profiler.hpp  ProjectPaths.h  ReflectedTypeDatabase.h
src/engine_lib/public/render/: DebugDrawer.h  FontManager.h  LightSourceManager.h  Material.h  MeshDrawLayer.hpp  PostProcessManager.h  PostProcessSettings.h  RenderStatistics.h  Renderer.h  ShaderAlignmentConstants.hpp  ShaderConstantManager.hpp  ShaderConstantsSetter.hpp  ShaderManager.h  UiLayer.hpp
src/engine_lib/public/sound/: SoundChannel.hpp  SoundManager.h
src/engine_lib/src/: Error.cpp  Renderer.cpp  Renderer.h  SdlManager.hpp  Window.cpp  Window.h
src/node_super_call_checker/: CMakeLists.txt  main.cpp
(+119 files in other folders)
